{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 25,
  "lineage": "6cb550f9-d5cd-f936-0a7a-0ff1f0ff42a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac9cd2625f846d5d",
            "arn": "arn:aws:ec2:eu-west-3:652058538974:instance/i-0607ddfeeb606b239",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0607ddfeeb606b239",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "hackathon4-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-028ad819aa89c93a8",
            "private_dns": "ip-10-0-1-212.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.212",
            "public_dns": "ec2-51-44-179-120.eu-west-3.compute.amazonaws.com",
            "public_ip": "51.44.179.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:652058538974:key/534e965d-6a77-465e-86bc-6a1c9fd293c1",
                "tags_all": {
                  "Architecture": "ARM64",
                  "Environment": "hackathon4",
                  "ManagedBy": "terraform",
                  "Owner": "JEANDHN33",
                  "Project": "hackathon4"
                },
                "throughput": 125,
                "volume_id": "vol-07013146a1d583998",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0335ddd847f859ed7",
            "tags": {
              "Name": "hackathon4-store-api-server",
              "Role": "application",
              "Type": "api-server"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-store-api-server",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Role": "application",
              "Type": "api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc3aeec6214fee2b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.hackathon4_keypair",
            "aws_security_group.api_server_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.jenkins_sg",
            "aws_security_group.kong_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.hackathon4_vpc",
            "data.aws_ami.amazon_linux_arm64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac9cd2625f846d5d",
            "arn": "arn:aws:ec2:eu-west-3:652058538974:instance/i-09fc9c887fef265b8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09fc9c887fef265b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "hackathon4-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a09570119e5ce382",
            "private_dns": "ip-10-0-2-96.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.96",
            "public_dns": "ec2-15-236-123-110.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.123.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:652058538974:key/534e965d-6a77-465e-86bc-6a1c9fd293c1",
                "tags_all": {
                  "Architecture": "ARM64",
                  "Environment": "hackathon4",
                  "ManagedBy": "terraform",
                  "Owner": "JEANDHN33",
                  "Project": "hackathon4"
                },
                "throughput": 125,
                "volume_id": "vol-077fd4947eef5e2bf",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b3b6caa6620934e",
            "tags": {
              "Name": "hackathon4-bastion-host",
              "Role": "security-gateway",
              "Type": "bastion"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-bastion-host",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Role": "security-gateway",
              "Type": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06307c5db0bfa5ded"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.hackathon4_keypair",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.hackathon4_vpc",
            "data.aws_ami.amazon_linux_arm64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac9cd2625f846d5d",
            "arn": "arn:aws:ec2:eu-west-3:652058538974:instance/i-032696b69eacd0359",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032696b69eacd0359",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.large",
            "ipv6_address_count": 0,
            "key_name": "hackathon4-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0183bb16dbec9e858",
            "private_dns": "ip-10-0-1-77.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-52-47-142-170.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.142.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:652058538974:key/534e965d-6a77-465e-86bc-6a1c9fd293c1",
                "tags_all": {
                  "Architecture": "ARM64",
                  "Environment": "hackathon4",
                  "ManagedBy": "terraform",
                  "Owner": "JEANDHN33",
                  "Project": "hackathon4"
                },
                "throughput": 125,
                "volume_id": "vol-0990c0ea8adf13209",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0335ddd847f859ed7",
            "tags": {
              "Name": "hackathon4-jenkins-server",
              "Role": "cicd-pipeline",
              "Type": "jenkins"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-jenkins-server",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Role": "cicd-pipeline",
              "Type": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0106c966145369bff"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.hackathon4_keypair",
            "aws_security_group.bastion_sg",
            "aws_security_group.jenkins_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.hackathon4_vpc",
            "data.aws_ami.amazon_linux_arm64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac9cd2625f846d5d",
            "arn": "arn:aws:ec2:eu-west-3:652058538974:instance/i-0b97ffbb413cf9702",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b97ffbb413cf9702",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "hackathon4-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037e41dc5ace3ee9d",
            "private_dns": "ip-10-0-1-202.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-15-236-133-177.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.133.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:652058538974:key/534e965d-6a77-465e-86bc-6a1c9fd293c1",
                "tags_all": {
                  "Architecture": "ARM64",
                  "Environment": "hackathon4",
                  "ManagedBy": "terraform",
                  "Owner": "JEANDHN33",
                  "Project": "hackathon4"
                },
                "throughput": 125,
                "volume_id": "vol-00c2ec27ca4b2f302",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0335ddd847f859ed7",
            "tags": {
              "Name": "hackathon4-kong-gateway",
              "Role": "api-gateway",
              "Type": "kong-gateway"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-kong-gateway",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Role": "api-gateway",
              "Type": "kong-gateway"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03de362834af028d6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.hackathon4_keypair",
            "aws_security_group.bastion_sg",
            "aws_security_group.kong_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.hackathon4_vpc",
            "data.aws_ami.amazon_linux_arm64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hackathon4_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:652058538974:internet-gateway/igw-0ef643f65b072ccdf",
            "id": "igw-0ef643f65b072ccdf",
            "owner_id": "652058538974",
            "tags": {
              "Name": "hackathon4-internet-gateway"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-internet-gateway",
              "Owner": "JEANDHN33",
              "Project": "hackathon4"
            },
            "vpc_id": "vpc-0fc6302e1e5adbf7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hackathon4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:652058538974:route-table/rtb-087ce8df0e97115cc",
            "id": "rtb-087ce8df0e97115cc",
            "owner_id": "652058538974",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef643f65b072ccdf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hackathon4-public-route-table"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-public-route-table",
              "Owner": "JEANDHN33",
              "Project": "hackathon4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc6302e1e5adbf7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.hackathon4_igw",
            "aws_vpc.hackathon4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8f5f5e3e70a4df3",
            "route_table_id": "rtb-087ce8df0e97115cc",
            "subnet_id": "subnet-0335ddd847f859ed7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.hackathon4_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.hackathon4_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbcae3e85644eb69",
            "route_table_id": "rtb-087ce8df0e97115cc",
            "subnet_id": "subnet-04b3b6caa6620934e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.hackathon4_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.hackathon4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:652058538974:security-group/sg-0cc3aeec6214fee2b",
            "description": "Security group for Store API Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc3aeec6214fee2b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Jenkins",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0106c966145369bff"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06307c5db0bfa5ded"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Store API from Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0106c966145369bff"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Store API from Kong Gateway",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03de362834af028d6"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "hackathon4-api-server-20250722183104947100000005",
            "name_prefix": "hackathon4-api-server-",
            "owner_id": "652058538974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hackathon4-api-server-security-group",
              "Role": "application-server"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-api-server-security-group",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Role": "application-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc6302e1e5adbf7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.jenkins_sg",
            "aws_security_group.kong_sg",
            "aws_vpc.hackathon4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:652058538974:security-group/sg-06307c5db0bfa5ded",
            "description": "Security group for Bastion Host - SSH entry point",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06307c5db0bfa5ded",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH custom port pour Bastion",
                "from_port": 4222,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4222
              }
            ],
            "name": "hackathon4-bastion-20250722183058520900000001",
            "name_prefix": "hackathon4-bastion-",
            "owner_id": "652058538974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hackathon4-bastion-security-group",
              "Role": "bastion-host"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-bastion-security-group",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Role": "bastion-host"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc6302e1e5adbf7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hackathon4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:652058538974:security-group/sg-0106c966145369bff",
            "description": "Security group for Jenkins CI/CD Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0106c966145369bff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Jenkins Web from Bastion",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06307c5db0bfa5ded"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06307c5db0bfa5ded"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hackathon4-jenkins-20250722183101863600000002",
            "name_prefix": "hackathon4-jenkins-",
            "owner_id": "652058538974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hackathon4-jenkins-security-group",
              "Role": "cicd-server"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-jenkins-security-group",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Role": "cicd-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc6302e1e5adbf7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.hackathon4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kong_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:652058538974:security-group/sg-03de362834af028d6",
            "description": "Security group for Kong API Gateway",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03de362834af028d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kong Proxy public",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Kong Admin from Bastion",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06307c5db0bfa5ded"
                ],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06307c5db0bfa5ded"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hackathon4-kong-20250722183101865800000003",
            "name_prefix": "hackathon4-kong-",
            "owner_id": "652058538974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hackathon4-kong-security-group",
              "Role": "api-gateway"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-kong-security-group",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Role": "api-gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc6302e1e5adbf7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.hackathon4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:652058538974:subnet/subnet-0335ddd847f859ed7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0335ddd847f859ed7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "652058538974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-west-3a",
              "Name": "hackathon4-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "AZ": "eu-west-3a",
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-public-subnet-1",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Type": "public"
            },
            "vpc_id": "vpc-0fc6302e1e5adbf7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hackathon4_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:652058538974:subnet/subnet-04b3b6caa6620934e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b3b6caa6620934e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "652058538974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-west-3b",
              "Name": "hackathon4-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "AZ": "eu-west-3b",
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-public-subnet-2",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Type": "public"
            },
            "vpc_id": "vpc-0fc6302e1e5adbf7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hackathon4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hackathon4_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:652058538974:vpc/vpc-0fc6302e1e5adbf7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b5ed6e9519e59da",
            "default_route_table_id": "rtb-067ebeb36276c3925",
            "default_security_group_id": "sg-02f11e71f9cbe6827",
            "dhcp_options_id": "dopt-00bfc77ce2bac5d6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc6302e1e5adbf7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067ebeb36276c3925",
            "owner_id": "652058538974",
            "tags": {
              "Name": "hackathon4-vpc",
              "Type": "main-network"
            },
            "tags_all": {
              "Architecture": "ARM64",
              "Environment": "hackathon4",
              "ManagedBy": "terraform",
              "Name": "hackathon4-vpc",
              "Owner": "JEANDHN33",
              "Project": "hackathon4",
              "Type": "main-network"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}